--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="appPrimary">#707070</color>
+    <color name="appSuccess">#3DE79D</color>
+    <color name="appDanger">#E73D3D</color>
 </resources>
