--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="fontSize_time">25sp</dimen>
+    <dimen name="region_spacing">6dp</dimen>
+
+    <dimen name="title_size">16sp</dimen>
+    <dimen name="name_size">11sp</dimen>
 </resources>
