--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,26 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="TestScroll">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">@font/lato</item>
+    </style>
+
+    <!-- Toggle button for "days" -->
+    <style name="Widget.Buttons.Toggle" parent="android:Widget">
+        <item name="android:background">@drawable/toogle_bg</item>
+    </style>
+
+    <style name="toggleButton" parent="AppTheme">
+        <item name="android:buttonStyleToggle">@style/Widget.Buttons.Toggle</item>
+        <item name="android:textColor">@drawable/toogle_text_color</item>
     </style>
 
 </resources>
