--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -59,7 +58,8 @@
             android:layout_marginEnd="11dp"
             android:backgroundTint="@color/appPrimary"
             android:onClick="addAlarm"
-            android:src="@drawable/ic_add_30dp" />
+            android:src="@drawable/ic_add_30dp"
+            app:borderWidth="0dp" />
 
     </RelativeLayout>
 
