--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="appPrimary">#707070</color>
+    <color name="appSecondary">#A8A8A8</color>
+    <color name="appLightGray">#E2E2E2</color>
     <color name="appSuccess">#3DE79D</color>
     <color name="appDanger">#E73D3D</color>
 </resources>
