"Completing" one feature: Save alarm
- Adding class Alarm
- Treat alarm data as an object, and use ArrayList<Array> to show on main screen
- SharedPreferences to keep data from being lost upon session destroy
- RecyclerView to show multiple data from SharedPreferences
- Get location coordinate by using Geocoder

--- a/app/src/main/res/layout/add_alarm.xml
+++ b/app/src/main/res/layout/add_alarm.xml
@@ -241,6 +241,7 @@
             </RelativeLayout>
 
             <Switch
+                android:id="@+id/locationIsSet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
