--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_centerInParent="true"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/lato"
+            android:layout_marginBottom="12dp"
             android:text="" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -55,7 +56,7 @@
             android:layout_below="@id/Clock"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="206dp"
+            android:layout_marginTop="190dp"
             android:layout_marginEnd="11dp"
             android:backgroundTint="@color/appPrimary"
             android:onClick="addAlarm"
@@ -70,14 +71,15 @@
         android:layout_below="@id/top_bar"
         app:layout_constraintTop_toBottomOf="@+id/top_bar">
 
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-            <!-- View Group -->
-
-        </ScrollView>
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_alarm"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
